# gtk-ui-builder-examlpe

./: Cargo.toml  README.md
assets/ui/: example1.blp  main.blp  main.ui
src/: main.rs
