[package]
name = "examlpe-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#gtk-ui-builder = { git = "https://github.com/abcijkxyz/gtk-ui-builder", branch = "main", package = "gtk-ui-builder", features = ["gtk-builder", "rhai-events"] }
libadwaita = "0.5.2"
rhai = "1.8.0"
gtk4 = "0.7.2"

[dependencies.gtk-ui-builder]
git = "https://github.com/abcijkxyz/gtk-ui-builder"
branch = "main"
package = "gtk-ui-builder"
features = [
    "gtk-builder",
#    "rhai-events"
]
